manifests/coding-fe.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fe-main-coding
  labels:
    name: fe-main-coding
    entity: fe
    env: main
    capability: coding
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
