manifests/coding.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ssint-main-coding
  labels:
    name: ssint-main-coding
    entity: ssint
    env: main
    capability: coding
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
